--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+  <section>
+    <ul>
+      <li>You could center any thing</li>
+      <li>LOL</li>
+      <li>Dota</li>
+      <li>RPG</li>
+      <li>Wahaha</li>
+      <li>Wahahawakakakakkakaka</li>
 
+    </ul>
+  </section>
 </body>
 </html>
